# InternationalSpaceStation-PathPlanning

./: .gitignore  CMakeLists.txt  main.cpp  main_Kalman.cpp  main_map_generator.cpp  map_generator.cpp
CADs/: ISS_pcl.csv  LRO_35_reduced.stl  iss_pcl.csv
GPSaidedIMU/: GPSaidedINS.m  GPSaidedINS.m~  Nav_eq.m  error_growth.m  error_growth.m~  get_settings.m  main.m  mat_to_csv.m  mat_to_csv.m~  ss_model.m  tests.m
MAPs/: FreePoints.txt  iss_map_pcl.csv  path_planned_2.csv
_mac_patches/: 4342.patch
include/: AnimateActors.h  BreadthFirstPathPlanner.h  CostComparator.h  KalmanFilter.h  Map.h  Node.h  OptimalFuelBreadthFirstPathPlanner.h  State.h  Tester.h  auxiliary.h  collection.h  integration.h  simulation.h  transformations.h  visualization.h
matlab/: Chol_Wilt_Hill.m  DVComputation2Points.m  propagate_trajectory.m  setGlobalW.m
python/: Breadth First Search (2d).ipynb  KTH_tutorial_SensorFusion.ipynb  Kalman Position-Measurement Analysis.ipynb  Kalman_PositionMeasurement.ipynb  Scenario creation.ipynb
python/.ipynb_checkpoints/: KTH_tutorial_SensorFusion-checkpoint.ipynb  Kalman Position-Measurement Analysis-checkpoint.ipynb  Scenario creation-checkpoint.ipynb
src/: BreadthFirstPathPlanner.cpp  KalmanFilter.cpp  Map.cpp  OptimalFuelBreadthFirstPathPlanner.cpp  State.cpp  auxiliary.cpp  collection.cpp  integration.cpp  simulation.cpp  transformations.cpp  visualization.cpp
test/: CMakeLists.txt  main_test.cpp
